Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header>
   <nav class="navbar">
-    <div class="logo">Maa Sai Classes</div>
+   <div class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">Maa Sai Classes</a></div>
     <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -56,3 +56,4 @@
 
 </body>
 </html>
+
