--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maa Sai Classes - Home</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="STYLE.css">
 </head>
 <body>
 
 <header>
   <nav class="navbar">
-   <div class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">Maa Sai Classes</a></div>
+    <div class="logo"><a href="index.html" style="text-decoration: none; color: inherit;">Maa Sai Classes</a></div>
+
     <ul id="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -25,10 +25,7 @@
 <section class="hero">
   <h1>Welcome to Maa Sai Classes</h1>
   <p>Best Coaching Institute for Class 1 to 12 – Where Learning Meets Success.</p>
-  <button>
-  <a href="contact.html" class="btn">Join Now</a>
-  </button>
-
+  <button>Join Now</button>
 </section>
 
 <section>
@@ -47,13 +44,5 @@
 <!-- ===== WhatsApp Floating Button ===== -->
 <a href="https://wa.me/919624626862" class="whatsapp-float" target="_blank">💬</a>
 <script src="script.js"></script>
-<!-- WhatsApp Chat Button -->
-<a href="https://wa.me/9624626862?text=Hello Maa Sai Classes!" 
-   class="whatsapp_float" target="_blank" title="Chat with us">
-   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
-        alt="WhatsApp" width="50px" style="position: fixed; bottom: 20px; right: 20px; z-index: 100;">
-</a>
-
 </body>
 </html>
-
